# syntrack

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  dev.sh  mypy.ini  pyproject.toml  ruff.toml  syntrack_config.example.yaml
.github/workflows/: ci.yml  release.yml
deploy/: README.md  docker-compose.yml
docs/: CONTAINER_DESIGN.md  DESIGN_v03.md  IMPLEMENTATION_PLAN.md
example_data/: README.md  example_data_source.md  link_data.sh  syntrack_config.yaml  syntrack_config_abs_path.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
syntrack/: __init__.py  __main__.py  cache.py  cli.py  config.py  loader.py  model.py  palette.py
syntrack/api/: __init__.py  app.py  deps.py  regions.py  routes_align.py  routes_config.py  routes_genomes.py  routes_highlight.py  routes_paint.py  routes_pairs.py  routes_scm.py  routes_synteny.py  schemas.py  state.py
syntrack/derive/: __init__.py  block.py  pair.py
syntrack/io/: __init__.py  blast.py  fai.py  manifest.py
syntrack/store/: __init__.py  genome.py  scm.py
tests/: conftest.py
tests/api/: conftest.py  test_align.py  test_config.py  test_genomes.py  test_healthz.py  test_highlight.py  test_paint.py  test_pairs.py  test_scm_lookup.py  test_static.py  test_synteny.py
tests/unit/: test_blast.py  test_block.py  test_cache.py  test_cli.py  test_config.py  test_fai.py  test_genome_store.py  test_manifest.py  test_pair.py  test_palette.py  test_regions.py  test_scm_store.py
(+17 files in other folders)
